--- a/index.html
+++ b/index.html
@@ -74,6 +74,62 @@
 		      <ul class="nav navbar-nav navbar-right">
 		        <li><a class="btn btn-default navbar-btn" href="#" data-toggle="modal" data-target="#modalReg">Регистрация</a></li>
 		        <li><a class="btn btn-default navbar-btn" href="#" data-toggle="modal" data-target="#modalSignIn">Вход</a></li>
+
+		        <li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+					<span class="header__user-image">
+						<img src="img/user-icon.png" alt="user">
+						<span>2</span>
+					</span> Guest <span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><a href="#">list item</a></li>
+						<li><a href="#">list item</a></li>
+						<li><a href="#">list item</a></li>
+						<li><a href="#">list item</a></li>
+						<li><a href="#">list item</a></li>
+						<li><a href="#">list item</a></li>
+					</ul>
+				</li>
+
+		        <!-- <li class="header__auth-user">
+					<div class="header__user-image">
+						<img src="img/user-icon.png" alt="user">
+						<span>2</span>
+					</div>
+					<span></span>
+					<ul class="header__dropdown">
+						<li class="header__dropdown-item">list item 77777</li>
+						<li class="header__dropdown-item">item 222</li>
+						<li class="header__dropdown-item">item 222</li>
+						<li class="header__dropdown-item">item 222</li>
+						<li class="header__dropdown-item">item 222</li>
+					</ul>
+				</li> -->
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+					<span class="header__user-image">
+						<img src="img/user-money.png" alt="money">
+					</span> 200 BTC <span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><a href="#">BTC</a></li>
+						<li><a href="#">EUR</a></li>
+						<li><a href="#">USD</a></li>
+						<li><a href="#">RUB</a></li>
+					</ul>
+					<!-- <div class="header__user-image">
+						<img src="img/user-money.png" alt="money">
+					</div>
+					<span>200 BTC</span>
+					<ul class="header__dropdown">
+						<li class="header__dropdown-item">Bitcoin</li>
+						<li class="header__dropdown-item">$$$$$$$$</li>
+						<li class="header__dropdown-item">Евро</li>
+						<li class="header__dropdown-item">item</li>
+						<li class="header__dropdown-item">item</li>
+					</ul> -->
+				</li>
+				<li><button class="header__second-button">Депозит</button></li>
+				
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
 				<div class="header__wrapper">
