--- a/index.html
+++ b/index.html
@@ -71,142 +71,34 @@
 						</li>
 		      </ul>
 
-		      <ul class="nav navbar-nav navbar-right">
-		        <li><a class="btn btn-default navbar-btn" href="#" data-toggle="modal" data-target="#modalReg">Регистрация</a></li>
-		        <li><a class="btn btn-default navbar-btn" href="#" data-toggle="modal" data-target="#modalSignIn">Вход</a></li>
+		      <ul class="nav navbar-nav navbar-right header__user">
+						<li class="header__auth">
+							<button type="button" class="btn btn-danger " data-toggle="modal" data-target="#modalReg">Регистрация</button>
+							<button type="button" class="btn btn-secondary " data-toggle="modal" data-target="#modalSignIn">Вход</button>
+						</li>
 
-		        <li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-					<span class="header__user-image">
-						<img src="img/user-icon.png" alt="user">
-						<span>2</span>
-					</span> Guest <span class="caret"></span></a>
-					<ul class="dropdown-menu">
-						<li><a href="#">list item</a></li>
-						<li><a href="#">list item</a></li>
-						<li><a href="#">list item</a></li>
-						<li><a href="#">list item</a></li>
-						<li><a href="#">list item</a></li>
-						<li><a href="#">list item</a></li>
-					</ul>
-				</li>
+		        <li class="dropdown  hidden">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+							<span class="header__user-image">
+								<img src="img/user-icon.png" alt="user">
+								<span>2</span>
+							</span> Guest <span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="#">list item</a></li>
+								<li><a href="#">list item</a></li>
+								<li><a href="#">list item</a></li>
+								<li><a href="#">list item</a></li>
+								<li><a href="#">list item</a></li>
+								<li><a href="#">list item</a></li>
+							</ul>
+						</li>
 
-		        <!-- <li class="header__auth-user">
-					<div class="header__user-image">
-						<img src="img/user-icon.png" alt="user">
-						<span>2</span>
-					</div>
-					<span></span>
-					<ul class="header__dropdown">
-						<li class="header__dropdown-item">list item 77777</li>
-						<li class="header__dropdown-item">item 222</li>
-						<li class="header__dropdown-item">item 222</li>
-						<li class="header__dropdown-item">item 222</li>
-						<li class="header__dropdown-item">item 222</li>
-					</ul>
-				</li> -->
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-					<span class="header__user-image">
-						<img src="img/user-money.png" alt="money">
-					</span> 200 BTC <span class="caret"></span></a>
-					<ul class="dropdown-menu">
-						<li><a href="#">BTC</a></li>
-						<li><a href="#">EUR</a></li>
-						<li><a href="#">USD</a></li>
-						<li><a href="#">RUB</a></li>
-					</ul>
-					<!-- <div class="header__user-image">
-						<img src="img/user-money.png" alt="money">
-					</div>
-					<span>200 BTC</span>
-					<ul class="header__dropdown">
-						<li class="header__dropdown-item">Bitcoin</li>
-						<li class="header__dropdown-item">$$$$$$$$</li>
-						<li class="header__dropdown-item">Евро</li>
-						<li class="header__dropdown-item">item</li>
-						<li class="header__dropdown-item">item</li>
-					</ul> -->
-				</li>
-				<li><button class="header__second-button">Депозит</button></li>
-				
-		      </ul>
-		    </div><!-- /.navbar-collapse -->
-				<div class="header__wrapper">
-
-					<nav class="main-nav">
-
-						<div class="main-nav__menu-button">
-							<div id="first-line" class="main-nav__menu-line"></div>
-							<div id="second-line" class="main-nav__menu-line"></div>
-							<div id="third-line" class="main-nav__menu-line"></div>
-						</div>
-
-						<button class="main-nav__mobile-reg">Регистрация</button>
-
-						<a href="index.html" class="main-nav__logo"></a>
-
-						<button class="main-nav__mobile-enter">Вход</button>
-
-						<form action="#" class="main-nav__search-form">
-							<input type="search" class="main-nav__search-field">
-						</form>
-						<div class="main-nav__search-close"></div>
-
-						<ul class="main-nav__list">
-							<li class="main-nav__item main-nav__item--arrow main-nav__item--first"><span>Игры</span>
-
-								<ul id="menu-games" class="main-nav__dropdown">
-									<li class="main-nav__dropdown-item"><a href="#">Лобби</a></li>
-									<li class="main-nav__dropdown-item"><a href="#">Слоты</a></li>
-									<li class="main-nav__dropdown-item"><a href="#">Джекпоты</a></li>
-									<li class="main-nav__dropdown-item"><a href="#">Настольные</a></li>
-									<li class="main-nav__dropdown-item"><a href="#">Live диллер</a></li>
-								</ul>
-							</li>
-
-							<li class="main-nav__item main-nav__item--arrow main-nav__item--second"><span>Акции</span>
-
-								<ul class="main-nav__dropdown">
-									<li class="main-nav__dropdown-item"><a href="bonus.html">Приветственный бонус</a></li>
-									<li class="main-nav__dropdown-item"><a href="bonus.html#vip-bonus">VIP Bonus</a></li>
-									<li class="main-nav__dropdown-item"><a href="reload-bonus.html">Reload бонус</a></li>
-									<li class="main-nav__dropdown-item"><a href="everyweek-cashback.html">Кэшбек</a></li>
-									<li class="main-nav__dropdown-item"><a href="everyweek-cashback.html#live-casino">Live Casino Cashback</a></li>
-									<li class="main-nav__dropdown-item"><a href="day-slot.html">Слот дня во вторник</a></li>
-									<li class="main-nav__dropdown-item"><a href="free-spins.html">Фриспины в четверг</a></li>
-									<li class="main-nav__dropdown-item"><a href="tournament.html">Darkslot турнир</a></li>
-									<li class="main-nav__dropdown-item"><a href="levels.html">Уровни игроков</a></li>
-								</ul>
-							</li>
-
-							<li class="main-nav__item main-nav__item--hider"><span id="menu-support">Поддержка</span></li>
-							<li class="main-nav__item main-nav__item--hider"><a href="partners.html">Партнерам</a></li>
-							<li class="main-nav__item main-nav__item--arrow main-nav__item--fifth"><span>О нас</span>
-
-								<ul class="main-nav__dropdown">
-									<li class="main-nav__dropdown-item"><a href="about.html">О DarkSlot</a></li>
-									<li class="main-nav__dropdown-item"><a href="blog.html">Блог</a></li>
-									<li class="main-nav__dropdown-item"><a href="#" class="main-nav__dropdown-rules">Положения и условия</a></li>
-									<li class="main-nav__dropdown-item"><a href="#" class="main-nav__dropdown-policy">Политика конфиденциальности</a></li>
-								</ul>
-
-							</li>
-						</ul>
-					</nav>
-
-					<div class="header__buttons">
-						<button class="header__first-button">Регистрация</button>
-						<button class="header__second-button">Вход</button>
-					</div>
-
-					<div class="header__authorized">
-						<div class="header__auth-user">
+				        <!-- <li class="header__auth-user">
 							<div class="header__user-image">
 								<img src="img/user-icon.png" alt="user">
 								<span>2</span>
 							</div>
-							<span>anonymus</span>
+							<span></span>
 							<ul class="header__dropdown">
 								<li class="header__dropdown-item">list item 77777</li>
 								<li class="header__dropdown-item">item 222</li>
@@ -214,9 +106,19 @@
 								<li class="header__dropdown-item">item 222</li>
 								<li class="header__dropdown-item">item 222</li>
 							</ul>
-						</div>
-						<div class="header__auth-user">
-							<div class="header__user-image">
+						</li> -->
+						<li class="dropdown  hidden">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+							<span class="header__user-image">
+								<img src="img/user-money.png" alt="money">
+							</span> 200 BTC <span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="#">BTC</a></li>
+								<li><a href="#">EUR</a></li>
+								<li><a href="#">USD</a></li>
+								<li><a href="#">RUB</a></li>
+							</ul>
+							<!-- <div class="header__user-image">
 								<img src="img/user-money.png" alt="money">
 							</div>
 							<span>200 BTC</span>
@@ -226,11 +128,13 @@
 								<li class="header__dropdown-item">Евро</li>
 								<li class="header__dropdown-item">item</li>
 								<li class="header__dropdown-item">item</li>
-							</ul>
-						</div>
-						<button class="header__second-button">Депозит</button>
-					</div>
-				</div>
+							</ul> -->
+						</li>
+						<li class="header__deposit-btn hidden"><button type="button" class="btn btn-secondary">Депозит</button></li>
+
+		      </ul>
+		    </div><!-- /.navbar-collapse -->
+
 		  </div>
 		</nav>
 	</header>
@@ -623,9 +527,10 @@
 
 		<section class="buttons-level">
 			<div class="buttons-level__wrapper">
-				<button class="buttons-level__button" id="button1">2 уровень</button>
-				<button class="buttons-level__button" id="button2">3 уровень</button>
-				<button class="buttons-level__button" id="button3">4 уровень</button>
+				<button class="btn btn-secondary">2 уровень</button>
+				<button class="btn btn-secondary btn-secondary-full">3 уровень</button>
+				<button class="btn btn-danger">4 уровень</button>
+				<button class="btn btn-danger">Button</button>
 			</div>
 		</section>
 
