--- a/index.html
+++ b/index.html
@@ -20,86 +20,88 @@
 	<header class="header">
 		<nav class="navbar navbar-inverse navbar-fixed-top">
 		  <div class="container">
-				<!-- Brand and toggle get grouped for better mobile display -->
-		    <div class="navbar-header">
-		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-		        <span class="sr-only">Toggle navigation</span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		      </button>
-		      <a class="navbar-brand" href="index.html"><span class="main-nav__logo"></span></a>
-		    </div>
+				<div class="row">
+					<div class="col-sm-12">
+						<!-- Brand and toggle get grouped for better mobile display -->
+						<div class="navbar-header">
+							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+								<span class="sr-only">Toggle navigation</span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							</button>
+							<a class="navbar-brand" href="index.html"><span class="main-nav__logo"></span></a>
+						</div>
 
-		    <!-- Collect the nav links, forms, and other content for toggling -->
-		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		      <ul class="nav navbar-nav">
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Игры <span class="caret"></span></a>
-							<ul class="dropdown-menu">
-								<li><a href="#">Лобби</a></li>
-								<li><a href="#">Слоты</a></li>
-								<li><a href="#">Джекпоты</a></li>
-								<li><a href="#">Настольные</a></li>
-								<li><a href="#">Live диллер</a></li>
+						<!-- Collect the nav links, forms, and other content for toggling -->
+						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+							<ul class="nav navbar-nav">
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Игры <span class="caret"></span></a>
+									<ul class="dropdown-menu">
+										<li><a href="#">Лобби</a></li>
+										<li><a href="#">Слоты</a></li>
+										<li><a href="#">Джекпоты</a></li>
+										<li><a href="#">Настольные</a></li>
+										<li><a href="#">Live диллер</a></li>
+									</ul>
+								</li>
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Акции <span class="caret"></span></a>
+									<ul class="dropdown-menu">
+										<li><a href="bonus.html">Приветственный бонус</a></li>
+										<li><a href="bonus.html#vip-bonus">VIP Bonus</a></li>
+										<li><a href="reload-bonus.html">Reload бонус</a></li>
+										<li><a href="everyweek-cashback.html">Кэшбек</a></li>
+										<li><a href="everyweek-cashback.html#live-casino">Live Casino Cashback</a></li>
+										<li><a href="day-slot.html">Слот дня во вторник</a></li>
+										<li><a href="free-spins.html">Фриспины в четверг</a></li>
+										<li><a href="tournament.html">Darkslot турнир</a></li>
+										<li><a href="levels.html">Уровни игроков</a></li>
+									</ul>
+								</li>
+								<li><a href="#" data-toggle="modal" data-target="#modalSupport">Поддержка</a></li>
+								<li><a href="partners.html">Партнерам</a></li>
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">О нас <span class="caret"></span></a>
+									<ul class="dropdown-menu">
+										<li><a href="about.html">О DarkSlot</a></li>
+										<li><a href="blog.html">Блог</a></li>
+										<li><a href="#" class="main-nav__dropdown-rules">Положения и условия</a></li>
+										<li><a href="#" class="main-nav__dropdown-policy">Политика конфиденциальности</a></li>
+									</ul>
+								</li>
 							</ul>
-						</li>
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Акции <span class="caret"></span></a>
-							<ul class="dropdown-menu">
-								<li><a href="bonus.html">Приветственный бонус</a></li>
-								<li><a href="bonus.html#vip-bonus">VIP Bonus</a></li>
-								<li><a href="reload-bonus.html">Reload бонус</a></li>
-								<li><a href="everyweek-cashback.html">Кэшбек</a></li>
-								<li><a href="everyweek-cashback.html#live-casino">Live Casino Cashback</a></li>
-								<li><a href="day-slot.html">Слот дня во вторник</a></li>
-								<li><a href="free-spins.html">Фриспины в четверг</a></li>
-								<li><a href="tournament.html">Darkslot турнир</a></li>
-								<li><a href="levels.html">Уровни игроков</a></li>
-							</ul>
-						</li>
-		        <li><a href="#" data-toggle="modal" data-target="#modalSupport">Поддержка</a></li>
-		        <li><a href="partners.html">Партнерам</a></li>
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">О нас <span class="caret"></span></a>
-							<ul class="dropdown-menu">
-								<li><a href="about.html">О DarkSlot</a></li>
-								<li><a href="blog.html">Блог</a></li>
-								<li><a href="#" class="main-nav__dropdown-rules">Положения и условия</a></li>
-								<li><a href="#" class="main-nav__dropdown-policy">Политика конфиденциальности</a></li>
-							</ul>
-						</li>
-		      </ul>
 
-		      <ul class="nav navbar-nav navbar-right header__user">
-						<li class="header__auth">
-							<button type="button" class="btn btn-danger " data-toggle="modal" data-target="#modalReg">Регистрация</button>
-							<button type="button" class="btn btn-secondary " data-toggle="modal" data-target="#modalSignIn">Вход</button>
-						</li>
+							<ul class="nav navbar-nav navbar-right header__user">
+								<li class="header__auth">
+									<button type="button" class="btn btn-danger " data-toggle="modal" data-target="#modalReg">Регистрация</button>
+									<button type="button" class="btn btn-secondary " data-toggle="modal" data-target="#modalSignIn">Вход</button>
+								</li>
 
-		        <li class="dropdown  hidden">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-							<span class="header__user-image">
-								<img src="img/user-icon.png" alt="user">
-								<span>2</span>
-							</span> Guest <span class="caret"></span></a>
-							<ul class="dropdown-menu">
-								<li><a href="#">list item</a></li>
-								<li><a href="#">list item</a></li>
-								<li><a href="#">list item</a></li>
-								<li><a href="#">list item</a></li>
-								<li><a href="#">list item</a></li>
-								<li><a href="#">list item</a></li>
-							</ul>
-						</li>
+								<li class="dropdown  hidden">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+										<span class="header__user-image">
+											<img src="img/user-icon.png" alt="user">
+											<span>2</span>
+										</span> Guest <span class="caret"></span></a>
+										<ul class="dropdown-menu">
+											<li><a href="#">list item</a></li>
+											<li><a href="#">list item</a></li>
+											<li><a href="#">list item</a></li>
+											<li><a href="#">list item</a></li>
+											<li><a href="#">list item</a></li>
+											<li><a href="#">list item</a></li>
+										</ul>
+									</li>
 
-				        <!-- <li class="header__auth-user">
-							<div class="header__user-image">
-								<img src="img/user-icon.png" alt="user">
-								<span>2</span>
-							</div>
-							<span></span>
-							<ul class="header__dropdown">
+									<!-- <li class="header__auth-user">
+									<div class="header__user-image">
+									<img src="img/user-icon.png" alt="user">
+									<span>2</span>
+								</div>
+								<span></span>
+								<ul class="header__dropdown">
 								<li class="header__dropdown-item">list item 77777</li>
 								<li class="header__dropdown-item">item 222</li>
 								<li class="header__dropdown-item">item 222</li>
@@ -109,32 +111,33 @@
 						</li> -->
 						<li class="dropdown  hidden">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-							<span class="header__user-image">
-								<img src="img/user-money.png" alt="money">
-							</span> 200 BTC <span class="caret"></span></a>
-							<ul class="dropdown-menu">
-								<li><a href="#">BTC</a></li>
-								<li><a href="#">EUR</a></li>
-								<li><a href="#">USD</a></li>
-								<li><a href="#">RUB</a></li>
-							</ul>
-							<!-- <div class="header__user-image">
+								<span class="header__user-image">
+									<img src="img/user-money.png" alt="money">
+								</span> 200 BTC <span class="caret"></span></a>
+								<ul class="dropdown-menu">
+									<li><a href="#">BTC</a></li>
+									<li><a href="#">EUR</a></li>
+									<li><a href="#">USD</a></li>
+									<li><a href="#">RUB</a></li>
+								</ul>
+								<!-- <div class="header__user-image">
 								<img src="img/user-money.png" alt="money">
 							</div>
 							<span>200 BTC</span>
 							<ul class="header__dropdown">
-								<li class="header__dropdown-item">Bitcoin</li>
-								<li class="header__dropdown-item">$$$$$$$$</li>
-								<li class="header__dropdown-item">Евро</li>
-								<li class="header__dropdown-item">item</li>
-								<li class="header__dropdown-item">item</li>
-							</ul> -->
-						</li>
-						<li class="header__deposit-btn hidden"><button type="button" class="btn btn-secondary">Депозит</button></li>
+							<li class="header__dropdown-item">Bitcoin</li>
+							<li class="header__dropdown-item">$$$$$$$$</li>
+							<li class="header__dropdown-item">Евро</li>
+							<li class="header__dropdown-item">item</li>
+							<li class="header__dropdown-item">item</li>
+						</ul> -->
+					</li>
+					<li class="header__deposit-btn hidden"><button type="button" class="btn btn-secondary">Депозит</button></li>
 
-		      </ul>
-		    </div><!-- /.navbar-collapse -->
-
+				</ul>
+			</div><!-- /.navbar-collapse -->
+					</div>
+				</div>
 		  </div>
 		</nav>
 	</header>
