--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 			</div>
 		</section> -->
 
-		<section id="gamesPannel" class="tabs">
+		<!-- <section id="gamesPannel" class="tabs"> -->
 
 			<nav class="navbar navbar-inverse">
 				<div class="container">
@@ -449,12 +449,12 @@
 
 						<!-- Collect the nav links, forms, and other content for toggling -->
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-							<ul class="nav navbar-nav">
-								<li class="active"><a href="#"><span class="switchers__image switchers__image--first"></span> Лобби <span class="sr-only">(current)</span></a></li>
-								<li><a href="#"><span class="switchers__image switchers__image--second"></span> Слоты</a></li>
-								<li><a href="#"><span class="switchers__image switchers__image--third"> Джекпоты</a></li>
-								<li><a href="#"><span class="switchers__image switchers__image--fourth"> Настольные</a></li>
-								<li><a href="#"><span class="switchers__image switchers__image--fifth"> Live диллер</a></li>
+							<ul class="nav navbar-nav navbar-games">
+								<li class="active navbar-games-item"><a href="#">Лобби<span class="sr-only">(current)</span></a></li>
+								<li class="navbar-games-item"><a href="#">Слоты</a></li>
+								<li class="navbar-games-item"><a href="#">Джекпоты</a></li>
+								<li class="navbar-games-item"><a href="#">Настольные</a></li>
+								<li class="navbar-games-item"><a href="#">Live диллер</a></li>
 							</ul>
 
 							<ul class="nav navbar-nav navbar-right">
@@ -515,7 +515,7 @@
 				</div>
 			</div>
 
-		</section>
+		<!-- </section> -->
 
 		<section class="jackpot">
 			<div class="container">
@@ -820,10 +820,10 @@
 		<div class="container-fluid">
 			<div class="fixed-bar">
 				<div class="fixed-bar__wrapper">
-					<div class="fixed-bar__hider"></div>
+					<!-- <div class="fixed-bar__hider"></div>
 					<div class="fixed-bar__shower hidden">
 						<p>Показать бар</p>
-					</div>
+					</div> -->
 					<div class="fixed-bar__top-games-button"><p id="topGamesBtn">Топ-игры</p></div>
 					<form action="#" class="search">
 						<input type="search" class="search__field" placeholder="Поиск">
@@ -1641,12 +1641,14 @@
 							<div class="modal-header">
 								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 								<h4 class="modal-title" id="modalSecondLevelLabel">
-									<Sspan class="level-up-header">
-										<span class="level-up-header__number level-up-header__number--second">2</span>
+									<span class="level-up-header-wrap">
+										<span class="level-up-header">
+											<span class="level-up-header__number level-up-header__number--second">2</span>
 
-										<span class="level-up-header__greeting-wrapper">
-											<span class="level-up-header__greeting">Поздравляем, вы получили</span>
-											<span class="level-up-header__level">Уровень</span>
+											<span class="level-up-header__greeting-wrapper">
+												<span class="level-up-header__greeting">Поздравляем, вы получили</span>
+												<span class="level-up-header__level">Уровень</span>
+											</span>
 										</span>
 									</span>
 								</h4>
@@ -1700,12 +1702,14 @@
 							<div class="modal-header">
 								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 								<h4 class="modal-title" id="modalThirdLevelLabel">
-									<Sspan class="level-up-header">
-										<span class="level-up-header__number level-up-header__number--third">3</span>
+									<span class="level-up-header-wrap">
+										<span class="level-up-header">
+											<span class="level-up-header__number level-up-header__number--third">3</span>
 
-										<span class="level-up-header__greeting-wrapper">
-											<span class="level-up-header__greeting">Поздравляем, вы получили</span>
-											<span class="level-up-header__level">Уровень</span>
+											<span class="level-up-header__greeting-wrapper">
+												<span class="level-up-header__greeting">Поздравляем, вы получили</span>
+												<span class="level-up-header__level">Уровень</span>
+											</span>
 										</span>
 									</span>
 								</h4>
@@ -1759,12 +1763,14 @@
 							<div class="modal-header">
 								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 								<h4 class="modal-title" id="modalFourthLevelLabel">
-									<Sspan class="level-up-header">
-										<span class="level-up-header__number"><img src="img/knight-with-hair.png" alt=""></span>
+									<span class="level-up-header-wrap">
+										<span class="level-up-header">
+											<span class="level-up-header__number"><img src="img/knight-with-hair.png" alt=""></span>
 
-										<span class="level-up-header__greeting-wrapper">
-											<span class="level-up-header__greeting">Поздравляем, у Вас особый уровень</span>
-											<span class="level-up-header__level">Dark Knight</span>
+											<span class="level-up-header__greeting-wrapper">
+												<span class="level-up-header__greeting">Поздравляем, у Вас особый уровень</span>
+												<span class="level-up-header__level">Dark Knight</span>
+											</span>
 										</span>
 									</span>
 								</h4>
