--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>
-							<!-- <a class="navbar-brand" href="index.html"><span class="main-nav__logo"></span></a> -->
+
 							<a class="navbar-brand ds-logo-wrap" href="index.html">
 								<img src="img/logo.png" alt="darkslot-logo" class="ds-logo">
 							</a>
@@ -69,9 +69,9 @@
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">О нас <span class="caret"></span></a>
 									<ul class="dropdown-menu">
 										<li><a href="about.html">О DarkSlot</a></li>
-										<li><a href="blog.html">Блог</a></li>
-										<li><a href="#" class="main-nav__dropdown-rules" data-toggle="modal" data-target="#modalRules">Положения и условия</a></li>
-										<li><a href="#" class="main-nav__dropdown-policy" data-toggle="modal" data-target="#modalPolicy">Политика конфиденциальности</a></li>
+										<!-- <li><a href="blog.html">Блог</a></li> -->
+										<li><a href="#" role="button" data-toggle="modal" data-target="#modalRules">Положения и условия</a></li>
+										<li><a href="#" role="button" data-toggle="modal" data-target="#modalPolicy">Политика конфиденциальности</a></li>
 									</ul>
 								</li>
 							</ul>
@@ -82,69 +82,42 @@
 									<button type="button" class="btn btn-secondary " data-toggle="modal" data-target="#modalSignIn">Вход</button>
 								</li>
 
-								<li class="dropdown ">
+								<li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 										<span class="header__user-image">
 											<img src="img/user-icon.png" alt="user">
 											<span>2</span>
 										</span> Guest <span class="caret"></span></a>
-										<ul class="dropdown-menu">
-											<li><a href="#">list item</a></li>
-											<li><a href="#">list item</a></li>
-											<li><a href="#">list item</a></li>
-											<li><a href="#">list item</a></li>
-											<li><a href="#">list item</a></li>
-											<li><a href="#">list item</a></li>
-										</ul>
-									</li>
-
-									<!-- <li class="header__auth-user">
-									<div class="header__user-image">
-										<img src="img/user-icon.png" alt="user">
-										<span>2</span>
-									</div>
-									<span></span>
-									<ul class="header__dropdown">
-									<li class="header__dropdown-item">list item 77777</li>
-									<li class="header__dropdown-item">item 222</li>
-									<li class="header__dropdown-item">item 222</li>
-									<li class="header__dropdown-item">item 222</li>
-									<li class="header__dropdown-item">item 222</li>
-								</ul>
-							</li> -->
-							<li class="dropdown ">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-									<span class="header__user-image">
-										<img src="img/user-money.png" alt="money">
-									</span> 200 BTC <span class="caret"></span></a>
 									<ul class="dropdown-menu">
-										<li><a href="#">BTC</a></li>
-										<li><a href="#">EUR</a></li>
-										<li><a href="#">USD</a></li>
-										<li><a href="#">RUB</a></li>
+										<li><a href="#">list item</a></li>
+										<li><a href="#">list item</a></li>
+										<li><a href="#">list item</a></li>
+										<li><a href="#">list item</a></li>
+										<li><a href="#">list item</a></li>
+										<li><a href="#">list item</a></li>
 									</ul>
-									<!-- <div class="header__user-image">
-									<img src="img/user-money.png" alt="money">
-									</div>
-									<span>200 BTC</span>
-									<ul class="header__dropdown">
-									<li class="header__dropdown-item">Bitcoin</li>
-									<li class="header__dropdown-item">$$$$$$$$</li>
-									<li class="header__dropdown-item">Евро</li>
-									<li class="header__dropdown-item">item</li>
-									<li class="header__dropdown-item">item</li>
-								</ul> -->
-							</li>
-							<li class="header__deposit-btn"><button type="button" class="btn btn-secondary">Депозит</button></li>
+								</li>
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+										<span class="header__user-image">
+											<img src="img/user-money.png" alt="money">
+										</span> 200 BTC <span class="caret"></span></a>
+										<ul class="dropdown-menu">
+											<li><a href="#">BTC</a></li>
+											<li><a href="#">EUR</a></li>
+											<li><a href="#">USD</a></li>
+											<li><a href="#">RUB</a></li>
+										</ul>
+								</li>
+								<li class="header__deposit-btn"><button type="button" class="btn btn-secondary">Депозит</button></li>
+							</ul>
+						</div><!-- /.navbar-collapse -->
 
-						</ul>
-					</div><!-- /.navbar-collapse -->
-
+					</div>
 				</div>
 			</div>
-		</div>
-	</nav>
-</header>
+		</nav>
+	</header>
 
 <div class="main-wrapper main-wrapper--triangles">
 
