--- a/index.html
+++ b/index.html
@@ -167,16 +167,16 @@
 		  				<div class="col-sm-6">
 		  					<div class="row">
 		  						<div class="col-sm-6"> 
-		  							<div class="slide-bonus">
+		  							<!-- <div class="slide-bonus">
 		  								<span class="slide-bonus__first-line">10$</span>
 		  								<span class="slide-bonus__second-line">без депозита</span>
 		  								<span class="slide-bonus__third-line">- за регистрацию -</span>
 		  								<button class="slide-bonus__link" id="slider-button-rules">Подробнее</button>
-		  							</div>
+		  							</div> -->
 		  						 </div>
 
 		  						<div class="col-sm-6"> 
-		  							<form action="#" class="registration-form-mini">
+		  							<!-- <form action="#" class="registration-form-mini">
 		  								<input type="email" placeholder="Email" class="registration-form-mini__email">
 		  								<input type="text" placeholder="Никнейм" class="registration-form-mini__nickname">
 		  								<input type="password" placeholder="Пароль" class="registration-form-mini__password">
@@ -194,7 +194,7 @@
 
 		  								<input type="submit" class="registration-form-mini__button" value="Регистрация">
 		  								<button class="slide__reg-button">Регистрация</button>
-		  							</form>
+		  							</form> -->
 		  						</div>
 		  					</div>
 		  				</div> 
@@ -202,7 +202,7 @@
 		  		</div>
 		  	</div>
 
-		  	<!-- <div class="item">
+		  	<div class="item">
 		  		<img src="img/slider-images/slide-viking.png" alt="viking">
 		  		<div class="">
 
@@ -281,7 +281,7 @@
 		  				<a href="free-spins.html" class="slide__button slide__button--centered">Подробнее</a>
 		  			</div>
 		  		</div>
-		  	</div> -->
+		  	</div>
 		  </div>
 
 		  <!-- Controls -->
