--- a/index.html
+++ b/index.html
@@ -161,22 +161,22 @@
 		  <!-- Wrapper for slides -->
 		  <div class="carousel-inner" role="listbox">
 		  	<div class="item active">
-		  		<!-- <div class="carousel-caption"></div> -->
+		  		<img src="img/slider-images/slide-lord.png" alt="lord">
 		  		<div class="container">
 		  			<div class="row">
 		  				<div class="col-sm-6">
 		  					<div class="row">
-		  						<div class="col-sm-6">
-		  							<div class="slide-bonus">
+		  						<div class="col-sm-6"> 
+		  							<!-- <div class="slide-bonus">
 		  								<span class="slide-bonus__first-line">10$</span>
 		  								<span class="slide-bonus__second-line">без депозита</span>
 		  								<span class="slide-bonus__third-line">- за регистрацию -</span>
 		  								<button class="slide-bonus__link" id="slider-button-rules">Подробнее</button>
-		  							</div>
-		  						</div>
+		  							</div> -->
+		  						 </div>
 
-		  						<div class="col-sm-6">
-		  							<form action="#" class="registration-form-mini">
+		  						<div class="col-sm-6"> 
+		  							<!-- <form action="#" class="registration-form-mini">
 		  								<input type="email" placeholder="Email" class="registration-form-mini__email">
 		  								<input type="text" placeholder="Никнейм" class="registration-form-mini__nickname">
 		  								<input type="password" placeholder="Пароль" class="registration-form-mini__password">
@@ -194,23 +194,17 @@
 
 		  								<input type="submit" class="registration-form-mini__button" value="Регистрация">
 		  								<button class="slide__reg-button">Регистрация</button>
-		  							</form>
+		  							</form> -->
 		  						</div>
 		  					</div>
-		  				</div>
-		  				<div class="col-sm-6">
-		  					<img src="img/slide-image-2.png" alt="slide" class="slide__image">
-		  				</div>
-		  			</div>
+		  				</div> 
+		  			</div> 
 		  		</div>
 		  	</div>
+
 		  	<div class="item">
-		  		<img src="..." alt="...">
-		  		<!-- <div class="carousel-caption"></div> -->
+		  		<img src="img/slider-images/slide-viking.png" alt="viking">
 		  		<div class="">
-		  			<!-- <div class="slide__image-wrapper"> -->
-		  			<img src="img/slide-image.png" alt="slide" class="slide__image">
-		  			<!-- </div> -->
 
 		  			<div class="slide__wrapper">
 		  				<div class="slide__text">
@@ -221,26 +215,20 @@
 		  			</div>
 		  		</div>
 		  	</div>
+
 		  	<div class="item">
-		  		<img src="..." alt="...">
-		  		<!-- <div class="carousel-caption"></div> -->
+		  		<img src="img/slider-images/day-slot.jpg" alt="day slot">
 		  		<div class="">
-		  			<!-- <div class="slide__image-wrapper"> -->
-		  			<img src="img/day-slot.jpg" alt="slide" class="slide__image">
-		  			<!-- </div> -->
 
 		  			<div class="slide__button-wrapper">
 		  				<a href="day-slot.html" class="slide__button slide__button--centered">Играть</a>
 		  			</div>
 		  		</div>
 		  	</div>
+
 		  	<div class="item">
-		  		<img src="..." alt="...">
-		  		<!-- <div class="carousel-caption"></div> -->
+		  		<img src="img/slider-images/slide-wood.png" alt="wood">
 		  		<div class="">
-		  			<div class="slide__image-wrapper">
-		  				<img src="img/wood-bg.png" alt="slide" class="slide__image">
-		  			</div>
 
 		  			<div class="slide__content-wrapper">
 
@@ -284,13 +272,10 @@
 		  			</div>
 		  		</div>
 		  	</div>
+
 		  	<div class="item">
-		  		<img src="..." alt="...">
-		  		<!-- <div class="carousel-caption"></div> -->
+		  		<img src="img/slider-images/free-spins.png" alt="free spins">
 		  		<div class="">
-		  			<div class="slide__image-wrapper">
-		  				<img src="img/free-spins.png" alt="slide" class="slide__image">
-		  			</div>
 
 		  			<div class="slide__button-wrapper">
 		  				<a href="free-spins.html" class="slide__button slide__button--centered">Подробнее</a>
@@ -434,86 +419,86 @@
 
 		<!-- <section id="gamesPannel" class="tabs"> -->
 
-			<nav class="navbar navbar-inverse">
-				<div class="container">
-					<div class="row">
-						<!-- Brand and toggle get grouped for better mobile display -->
-						<div class="navbar-header">
-							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-								<span class="sr-only">Toggle navigation</span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-							</button>
-						</div>
-
-						<!-- Collect the nav links, forms, and other content for toggling -->
-						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-							<ul class="nav navbar-nav navbar-games">
-								<li class="active navbar-games-item"><a href="#">Лобби<span class="sr-only">(current)</span></a></li>
-								<li class="navbar-games-item"><a href="#">Слоты</a></li>
-								<li class="navbar-games-item"><a href="#">Джекпоты</a></li>
-								<li class="navbar-games-item"><a href="#">Настольные</a></li>
-								<li class="navbar-games-item"><a href="#">Live диллер</a></li>
-							</ul>
-
-							<ul class="nav navbar-nav navbar-right">
-								<li class="dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Провайдеры <span class="caret"></span></a>
-									<ul class="dropdown-menu">
-										<li><a href="#">NetEnt</a></li>
-										<li><a href="#">Amatic</a></li>
-										<li><a href="#">Ezugi</a></li>
-										<li><a href="#">Softswiss</a></li>
-									</ul>
-								</li>
-							</ul>
-						</div><!-- /.navbar-collapse -->
-					</div>
-				</div><!-- /.container-fluid -->
-			</nav>
-
+		<nav class="navbar navbar-inverse">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-6">
-						<h2 class="tab__header">Топ игры</h2>
+					<!-- Brand and toggle get grouped for better mobile display -->
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
 					</div>
-					<div class="col-md-6 text-right">
-						<button class="tab__button">Случайная игра</button>
-					</div>
+
+					<!-- Collect the nav links, forms, and other content for toggling -->
+					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+						<ul class="nav navbar-nav navbar-games">
+							<li class="active navbar-games-item"><a href="#">Лобби<span class="sr-only">(current)</span></a></li>
+							<li class="navbar-games-item"><a href="#">Слоты</a></li>
+							<li class="navbar-games-item"><a href="#">Джекпоты</a></li>
+							<li class="navbar-games-item"><a href="#">Настольные</a></li>
+							<li class="navbar-games-item"><a href="#">Live диллер</a></li>
+						</ul>
+
+						<ul class="nav navbar-nav navbar-right">
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Провайдеры <span class="caret"></span></a>
+								<ul class="dropdown-menu">
+									<li><a href="#">NetEnt</a></li>
+									<li><a href="#">Amatic</a></li>
+									<li><a href="#">Ezugi</a></li>
+									<li><a href="#">Softswiss</a></li>
+								</ul>
+							</li>
+						</ul>
+					</div><!-- /.navbar-collapse -->
 				</div>
-				<div class="row">
-					<div class="col-md-3">
-						<div class="tab__variant"></div>
-					</div>
-					<div class="col-md-3">
-						<div class="tab__variant"></div>
-					</div>
-					<div class="col-md-3">
-						<div class="tab__variant"></div>
-					</div>
-					<div class="col-md-3">
-						<div class="tab__variant"></div>
-					</div>
-					<div class="col-md-3">
-						<div class="tab__variant"></div>
-					</div>
-					<div class="col-md-3">
-						<div class="tab__variant"></div>
-					</div>
-					<div class="col-md-3">
-						<div class="tab__variant"></div>
-					</div>
-					<div class="col-md-3">
-						<div class="tab__variant"></div>
-					</div>
+			</div><!-- /.container-fluid -->
+		</nav>
+
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6">
+					<h2 class="tab__header">Топ игры</h2>
 				</div>
-				<div class="row">
-					<div class="col-sm-12">
-						<div class="tab__more-button">Показать больше</div>
-					</div>
+				<div class="col-md-6 text-right">
+					<button class="tab__button">Случайная игра</button>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-md-3">
+					<div class="tab__variant"></div>
+				</div>
+				<div class="col-md-3">
+					<div class="tab__variant"></div>
+				</div>
+				<div class="col-md-3">
+					<div class="tab__variant"></div>
+				</div>
+				<div class="col-md-3">
+					<div class="tab__variant"></div>
+				</div>
+				<div class="col-md-3">
+					<div class="tab__variant"></div>
+				</div>
+				<div class="col-md-3">
+					<div class="tab__variant"></div>
+				</div>
+				<div class="col-md-3">
+					<div class="tab__variant"></div>
+				</div>
+				<div class="col-md-3">
+					<div class="tab__variant"></div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12">
+					<div class="tab__more-button">Показать больше</div>
+				</div>
+			</div>
+		</div>
 
 		<!-- </section> -->
 
