--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
 						<h2 class="tab__header">Топ игры</h2>
 					</div>
 					<div class="col-md-6 text-right">
-						<button class="tab__button">Случайная игра</button>
+						<button class="btn btn-secondary">Случайная игра</button>
 					</div>
 				</div>
 				<div class="row">
@@ -509,8 +509,8 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-sm-12">
-						<div class="tab__more-button">Показать больше</div>
+					<div class="col-sm-12 text-center">
+						<div class="btn btn-secondary">Показать больше</div>
 					</div>
 				</div>
 			</div>
@@ -522,7 +522,7 @@
 				<div class="jackpot__wrapper">
 					<h1 class="jackpot__header">$ 10 000 000,45</h1>
 					<h2 class="jackpot__underheader">Общий джекпот</h2>
-					<button id="gamesJackpot" class="jackpot__button">Показать игры с джекпотом</button>
+					<button id="gamesJackpot" class="btn btn-danger">Показать игры с джекпотом</button>
 					<span class="jackpot__background-text">#ничоси</span>
 
 					<div class="jackpot__image-wrapper">
@@ -588,7 +588,7 @@
 						</div>
 					</div>
 
-					<button class="last-winners__button">Играть сейчас</button>
+					<button class="btn btn-danger">Играть сейчас</button>
 				</div>
 			</div>
 		</section>
@@ -623,7 +623,7 @@
 						<label for="bottom-form-checkbox" class="registration-form-mini__label-checkbox">Мне 18 лет и я принимаю Положения и условия</label>
 
 						<input type="submit" class="registration-form-mini__button" value="Регистрация">
-						<button class="registration__reg-button">Регистрация</button>
+						<button class="btn btn-secondary btn-secondary-full">Регистрация</button>
 					</form>
 				</div>
 			</div>
@@ -636,8 +636,8 @@
 					<div class="col-sm-6">
 						<h2 class="popular-games__header">Новые игры</h2>
 					</div>
-					<div class="col-sm-6">
-						<button class="popular-games__button">Случайная игра</button>
+					<div class="col-sm-6 text-right">
+						<button class="btn btn-secondary">Случайная игра</button>
 					</div>
 				</div>
 				<div class="row">
@@ -669,8 +669,8 @@
 					<!-- </div> -->
 				</div>
 				<div class="row">
-					<div class="col-sm-12">
-						<button class="popular-games__more-button">Показать больше</button>
+					<div class="col-sm-12 text-center">
+						<button class="btn btn-secondary">Показать больше</button>
 					</div>
 				</div>
 				<!-- <div class="popular-games__wrapper"></div> -->
@@ -683,7 +683,7 @@
 					<div class="col-sm-6">
 						<div class="deposites__header">
 							<div>Заработай 45% + до 1000$ за каждый уровень! Уникальной партнерской программы!</div>
-							<a href="partners.html" class="deposites__button">Стать партнером</a>
+							<a href="partners.html" class="btn btn-danger">Стать партнером</a>
 						</div>
 					</div>
 					<div class="col-sm-6">
