--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 		  								<span class="slide-bonus__third-line">- за регистрацию -</span>
 		  								<button class="slide-bonus__link" id="slider-button-rules">Подробнее</button>
 		  							</div> -->
-		  						 </div>
+		  						</div>
 
 		  						<div class="col-sm-6">
 		  							<!-- <form action="#" class="registration-form-mini">
@@ -447,7 +447,7 @@
 						<ul class="nav navbar-nav navbar-right">
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Провайдеры <span class="caret"></span></a>
-								<ul class="dropdown-menu">
+								<ul class="dropdown-menu dropdown-menu-providers">
 									<li><a href="#">NetEnt</a></li>
 									<li><a href="#">Amatic</a></li>
 									<li><a href="#">Ezugi</a></li>
@@ -461,16 +461,15 @@
 		</nav>
 
 		<div class="container">
-			<div class="row">
+			<div class="row button-row">
 				<div class="col-md-6">
 					<h2 class="tab__header">Топ игры</h2>
 				</div>
 				<div class="col-md-6 text-right">
 					<button class="btn btn-secondary">Случайная игра</button>
 				</div>
-
-
 			</div>
+
 			<div class="row">
 				<div class="col-md-3">
 					<div class="tab__variant"></div>
@@ -499,7 +498,7 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-12 text-center">
-					<div class="btn btn-secondary">Показать больше</div>
+					<div class="btn btn-secondary btn-big">Показать больше</div>
 				</div>
 			</div>
 		</div>
@@ -511,7 +510,7 @@
 				<div class="jackpot__wrapper">
 					<h1 class="jackpot__header">$ 10 000 000,45</h1>
 					<h2 class="jackpot__underheader">Общий джекпот</h2>
-					<button id="gamesJackpot" class="btn btn-danger">Показать игры с джекпотом</button>
+					<button id="gamesJackpot" class="btn btn-danger btn-big">Показать игры с джекпотом</button>
 					<span class="jackpot__background-text">#ничоси</span>
 
 					<div class="jackpot__image-wrapper">
@@ -521,63 +520,65 @@
 			</div>
 		</section>
 
-		<section class="buttons-level">
-			<div class="buttons-level__wrapper">
-				<button class="btn btn-secondary" data-toggle="modal" data-target="#modalSecondLevel">2 уровень</button>
-				<button class="btn btn-secondary btn-secondary-full" data-toggle="modal" data-target="#modalThirdLevel">3 уровень</button>
-				<button class="btn btn-danger" data-toggle="modal" data-target="#modalFourthLevel">4 уровень</button>
-				<button class="btn btn-danger">Button</button>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 text-center" style="padding: 10px;">
+					<button class="btn btn-secondary" data-toggle="modal" data-target="#modalSecondLevel">2 уровень</button>
+					<button class="btn btn-secondary btn-secondary-full" data-toggle="modal" data-target="#modalThirdLevel">3 уровень</button>
+					<button class="btn btn-danger" data-toggle="modal" data-target="#modalFourthLevel">4 уровень</button>
+					<button class="btn btn-danger">Button</button>
+				</div>
 			</div>
-		</section>
+		</div>
 
 		<section class="last-winners">
 			<div class="container">
-				<div class="last-winners__wrapper">
-					<h2 class="last-winners__header">Последние победители</h2>
-					<div class="row winners">
-						<div class="col-md-3 col-sm-3">
-							<div class="winners__winner">
-								<div class="winners__avatar"></div>
-								<div class="winners__text">
-									<span class="winners__name">mvarts</span>
-									<span class="winners__gain">11 mBTC в</span>
-									<a href="#" class="winners__game">Игре престолов</a>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-3 col-sm-3">
-							<div class="winners__winner">
-								<div class="winners__avatar"></div>
-								<div class="winners__text">
-									<span class="winners__name">mvarts</span>
-									<span class="winners__gain">11 mBTC в</span>
-									<a href="#" class="winners__game">Игре престолов</a>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-3 col-sm-3">
-							<div class="winners__winner">
-								<div class="winners__avatar"></div>
-								<div class="winners__text">
-									<span class="winners__name">mvarts</span>
-									<span class="winners__gain">11 mBTC в</span>
-									<a href="#" class="winners__game">Игре престолов</a>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-3 col-sm-3">
-							<div class="winners__winner">
-								<div class="winners__avatar"></div>
-								<div class="winners__text">
-									<span class="winners__name">mvarts</span>
-									<span class="winners__gain">11 mBTC в</span>
-									<a href="#" class="winners__game">Игре престолов</a>
-								</div>
+				<h2 class="last-winners__header">Последние победители</h2>
+				<div class="row">
+					<div class="col-md-3 col-sm-3">
+						<div class="winners__winner">
+							<div class="winners__avatar"></div>
+							<div class="winners__text">
+								<span class="winners__name">mvarts</span>
+								<span class="winners__gain">11 mBTC в</span>
+								<a href="#" class="winners__game">Игре престолов</a>
 							</div>
 						</div>
 					</div>
-
-					<button class="btn btn-danger">Играть сейчас</button>
+					<div class="col-md-3 col-sm-3">
+						<div class="winners__winner">
+							<div class="winners__avatar"></div>
+							<div class="winners__text">
+								<span class="winners__name">mvarts</span>
+								<span class="winners__gain">11 mBTC в</span>
+								<a href="#" class="winners__game">Игре престолов</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-3">
+						<div class="winners__winner">
+							<div class="winners__avatar"></div>
+							<div class="winners__text">
+								<span class="winners__name">mvarts</span>
+								<span class="winners__gain">11 mBTC в</span>
+								<a href="#" class="winners__game">Игре престолов</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-3">
+						<div class="winners__winner">
+							<div class="winners__avatar"></div>
+							<div class="winners__text">
+								<span class="winners__name">mvarts</span>
+								<span class="winners__gain">11 mBTC в</span>
+								<a href="#" class="winners__game">Игре престолов</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				
+				<div class="row text-center">
+					<button class="btn btn-danger btn-big">Играть сейчас</button>
 				</div>
 			</div>
 		</section>
@@ -585,43 +586,46 @@
 		<section class="registration">
 			<div class="container">
 				<div class="row">
-					<div class="registration-bonus">
-						<h3 class="registration-bonus__header">Зарегистрируйся и получи</h3>
-						<h3 class="registration-bonus__underheader">Приветственный бонус</h3>
-						<span class="registration-bonus__count">1800$</span>
+					<div class="col-sm-6">
+						<div class="registration-bonus">
+							<h3 class="registration-bonus__header">Зарегистрируйся и получи</h3>
+							<h3 class="registration-bonus__underheader">Приветственный бонус</h3>
+							<span class="registration-bonus__count">1800$</span>
+						</div>
+
+						<div class="registration__character-wrapper">
+							<img src="img/tiger.png" alt="toger" class="registration__character">
+						</div>
 					</div>
 
-					<div class="registration__character-wrapper">
-						<img src="img/tiger.png" alt="toger" class="registration__character">
+					<div class="col-sm-offset-2 col-sm-4">
+						<form action="#" class="registration-form-mini registration-form-mini--bottom">
+							<input type="email" placeholder="Email" class="registration-form-mini__email">
+							<input type="text" placeholder="Никнейм" class="registration-form-mini__nickname">
+							<input type="password" placeholder="Пароль" class="registration-form-mini__password">
+							<input type="password" placeholder="Подтверждение пароля" class="registration-form-mini__password-confirm">
+							<select name="" id="bottom-reg-select" class="registration-form-mini__select">
+								<option value="currency" selected disabled>Валюта</option>
+								<option value="rub">Рубли</option>
+								<option value="euro">Евро</option>
+								<option value="dollar">Доллары</option>
+								<option value="btc">Биткоины</option>
+							</select>
+
+							<input type="checkbox" id="bottom-form-checkbox" class="registration-form-mini__checkbox">
+							<label for="bottom-form-checkbox" class="registration-form-mini__label-checkbox">Мне 18 лет и я принимаю Положения и условия</label>
+
+							<input type="submit" class="registration-form-mini__button" value="Регистрация">
+							<!-- <button class="btn btn-secondary btn-secondary-full">Регистрация</button> -->
+						</form>
 					</div>
-
-					<form action="#" class="registration-form-mini registration-form-mini--bottom">
-						<input type="email" placeholder="Email" class="registration-form-mini__email">
-						<input type="text" placeholder="Никнейм" class="registration-form-mini__nickname">
-						<input type="password" placeholder="Пароль" class="registration-form-mini__password">
-						<input type="password" placeholder="Подтверждение пароля" class="registration-form-mini__password-confirm">
-						<select name="" id="bottom-reg-select" class="registration-form-mini__select">
-							<option value="currency" selected disabled>Валюта</option>
-							<option value="rub">Рубли</option>
-							<option value="euro">Евро</option>
-							<option value="dollar">Доллары</option>
-							<option value="btc">Биткоины</option>
-						</select>
-
-						<input type="checkbox" id="bottom-form-checkbox" class="registration-form-mini__checkbox">
-						<label for="bottom-form-checkbox" class="registration-form-mini__label-checkbox">Мне 18 лет и я принимаю Положения и условия</label>
-
-						<input type="submit" class="registration-form-mini__button" value="Регистрация">
-						<button class="btn btn-secondary btn-secondary-full">Регистрация</button>
-					</form>
 				</div>
 			</div>
-			<!-- <div class="registration__wrapper"></div> -->
 		</section>
 
 		<section class="popular-games">
 			<div class="container">
-				<div class="row">
+				<div class="row header-row">
 					<div class="col-sm-6">
 						<h2 class="popular-games__header">Новые игры</h2>
 					</div>
@@ -659,7 +663,7 @@
 				</div>
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<button class="btn btn-secondary">Показать больше</button>
+						<button class="btn btn-secondary btn-big">Показать больше</button>
 					</div>
 				</div>
 				<!-- <div class="popular-games__wrapper"></div> -->
@@ -671,18 +675,17 @@
 				<div class="row">
 					<div class="col-sm-6">
 						<div class="deposites__header">
-							<div>Заработай 45% + до 1000$ за каждый уровень! Уникальной партнерской программы!</div>
-							<a href="partners.html" class="btn btn-danger">Стать партнером</a>
+							<p>Заработай 45% + до 1000$ за каждый уровень! Уникальной партнерской программы!</p>
 						</div>
+						<a href="partners.html" class="btn btn-danger btn-big">Стать партнером</a>
 					</div>
-					<div class="col-sm-6">
+					<div class="col-sm-offset-2 col-sm-4">
 						<div class="deposites__image-wrapper">
 							<img src="img/chest.png" alt="chest" class="deposites__image">
 						</div>
 					</div>
 				</div>
 			</div>
-			<!-- <div class="deposites__wrapper"></div> -->
 		</section>
 
 		<section class="games">
@@ -789,11 +792,8 @@
 		<footer class="footer">
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-6">
-						<div class="footer__copyright"></div>
-					</div>
-					<div class="col-sm-6">
-						<div class="footer__development text-right">
+					<div class="col-sm-offset-6 col-sm-6 text-right">
+						<div class="footer__development">
 							<span class="footer__developer">Дизайн сайта: </span>
 							<a href="http://www.crepla.com/" target="blank"><img src="img/crepla-logo.png" alt="crepla" class="footer__crepla-logo"></a>
 						</div>
