about page on bt

--- a/index.html
+++ b/index.html
@@ -507,14 +507,21 @@
 
 		<section class="jackpot">
 			<div class="container">
-				<div class="jackpot__wrapper">
-					<h1 class="jackpot__header">$ 10 000 000,45</h1>
-					<h2 class="jackpot__underheader">Общий джекпот</h2>
-					<button id="gamesJackpot" class="btn btn-danger btn-big">Показать игры с джекпотом</button>
-					<span class="jackpot__background-text">#ничоси</span>
-
-					<div class="jackpot__image-wrapper">
-						<img src="img/viking.png" alt="Викинг" class="jackpot__image">
+				<div class="row">
+					<div class="col-sm-7">
+						<div class="jack">
+							<div class="jackpot-wrap">
+								<h1 class="jackpot__header">$ 10 000 000,45</h1>
+								<h2 class="jackpot__underheader">Общий джекпот</h2>
+								<button id="gamesJackpot" class="btn btn-danger btn-big">Показать игры с джекпотом</button>
+								<span class="jackpot__background-text">#ничоси</span>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-5">
+						<div class="jackpot__image-wrapper">
+							<img src="img/viking.png" alt="Викинг" class="jackpot__image">
+						</div>
 					</div>
 				</div>
 			</div>
